--- a/package.json
+++ b/package.json
@@ -6,12 +6,20 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "preview": "vite preview",
+    "prettier": "prettier --check .",
+    "prettier-fix": "prettier --write .",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "lint-fix": "eslint . --fix",
+    "check": "npm run lint && npm run prettier",
+    "fix": "npm run lint-fix && npm run prettier-fix"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "babel-plugin-react-compiler": "^19.0.0-beta-df7b47d-20241124",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "eslint-plugin-import": "^2.31.0",
     "jotai": "^2.10.3",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
@@ -32,7 +40,9 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
