--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.7.9",
     "babel-plugin-react-compiler": "^19.0.0-beta-df7b47d-20241124",
     "class-variance-authority": "^0.7.1",
@@ -24,35 +25,35 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.59.0",
     "react-router": "^7.6.3",
-    "react-table": "^7.8.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.0",
+    "@stylistic/eslint-plugin": "^5.1.0",
     "@types/node": "^24.0.7",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.30.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import-x": "^4.16.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "@stylistic/eslint-plugin": "^5.1.0",
     "globals": "^16.2.0",
     "husky": "^9.1.7",
     "postcss": "^8.5.6",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^4.1.11",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.0",
     "vite": "^7.0.0"
   },
   "overrides": {
-        "eslint": "^9.30.0"
-    }
+    "eslint": "^9.30.0"
+  }
 }
