--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "husky": "^9.1.7",
+    "jiti": "^2.6.1",
     "postcss": "^8.5.6",
     "rimraf": "^6.1.0",
     "tailwindcss": "^4.1.17",
